# esp32-http-console

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_logik.c
